--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       POSTGRES_USER: ${PG_ROOT_USER}
       POSTGRES_PASSWORD: ${PG_ROOT_PASS}
       POSTGRES_DB: ${PG_DATABASE}
-    expose:
-      - 5432
+    ports:
+      - 5432:5432
     volumes:
       - pg_data:/var/lib/postgresql/data
 
