--- a/api/package.json
+++ b/api/package.json
@@ -1,18 +1,21 @@
 {
   "name": "api",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch src/index.ts"
   },
   "devDependencies": {
+    "@eddeee888/gcg-typescript-resolver-files": "^0.12.0",
+    "@graphql-codegen/cli": "^5.0.5",
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@graphql-tools/utils": "^10.8.6",
     "graphql": "^16.10.0",
     "graphql-yoga": "^5.13.2"
   }
